--- a/UnderWeight.html
+++ b/UnderWeight.html
@@ -406,7 +406,110 @@
       </div>
     </div>
   </div>
-      
+  <div class="row justify-content-md-center">
+      <div class="col-xl-5 col-lg-6 col-md-8">
+        <div class="section-title text-center title-ex1">
+          <h2>Videos for Diet </h2>
+         </div> 
+      </div>
+    </div>
+    <!-- section title ends -->
+    <div class="row ">
+      <div class="col-md-6">
+         
+<iframe width="500" height="360" src="https://www.youtube.com/embed/Z1maqoi4MeQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
+      <p><blockquote style="font-size:20px;font-weight:bold">CopyRights @<a href="https://www.youtube.com/channel/UCtf-Qgi9jr5mCHGD-xlZsMQ" target="_blank">Eliet Throws Coaching</a></blockquote></p>
+	<u><cite style="font-weight:bold;">Description</cite></u>
+	 
+	 <blockquote style="font-size:20px;font-weight:bold">
+	  In this video, I share with you 5 easy high protein fruit smoothie recipes, 
+	  and each uses just 5 ingredients or less!  Protein smoothies are my GO-TO for eating healthy, 
+	  and losing weight, and I enjoy each of these ALL the time!
+	  </blockquote>
+	  </div>
+      <div class="col-md-6">
+<iframe width="500" height="360" src="https://www.youtube.com/embed/ZO5nfnAOxHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
+  <p><blockquote style="font-size:20px;font-weight:bold">CopyRights @<a href="https://www.youtube.com/channel/UCuMgQUOIqnldwyVhkUCbwWw" target="_blank">Your Health TV</a></blockquote></p>
+	<u><cite style="font-weight:bold;">Description</cite></u>
+	<blockquote style="font-size:20px;font-weight:bold">
+	drinking milk with resistance training you can not only increase weight you can also grow your muscle mass. 
+	In this video we reveal more on drinking mlik to gain weight and build muscles
+	</blockquote>
+		  </div>
+      <div class="col-md-6" style="padding-top: 10px;">
+<iframe width="500" height="360" src="https://www.youtube.com/embed/_q00_DNOAvo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
+		  <p><blockquote style="font-size:20px;font-weight:bold">CopyRights @<a href="https://www.youtube.com/channel/UCjo3kud0qg_wivP5Kvpi_Fw" target="_blank">Dhurandhar Weight Losss</a></blockquote></p>
+	<u><cite style="font-weight:bold;">Description</cite></u>
+		
+		<blockquote style="font-size:20px;font-weight:bold">
+	Does eating RICE make you gain weight ? will be explained in this video
+</blockquote>
+
+	
+		  </div>
+      <div class="col-md-6">
+	  <iframe width="500" height="360" src="https://www.youtube.com/embed/YGoJoBunnBw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	   <p><blockquote style="font-size:20px;font-weight:bold">CopyRights @<a href="https://www.youtube.com/channel/UCjo3kud0qg_wivP5Kvpi_Fw" target="_blank">Body Hub</a></blockquote></p>
+	  
+	<u><cite style="font-weight:bold;">Description</cite></u>
+				<blockquote style="font-size:20px;font-weight:bold">
+
+	Peanut butter is packed with essential nutrients such as healthy fats, vitamins, and minerals. 
+
+Its nutritional value is the primary reason why peanut butter is great for people wanting to gain weight
+	
+	</blockquote>
+          </div>
+    </div>
+        <div class="row ">
+      <div class="col-md-6">
+<iframe width="500" height="360" src="https://www.youtube.com/embed/zMsHPvqOZjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>         
+<p><blockquote style="font-size:20px;font-weight:bold">CopyRights @<a href="https://www.youtube.com/channel/UCA4ZHH0e3Nd4yWcweMuK6Yg" target="_blank">Health Tips</a></blockquote></p>
+	
+	
+	<u><cite style="font-weight:bold;">Description</cite></u>
+				<blockquote style="font-size:20px;font-weight:bold">
+Eat Red Meat For Weight Gain And Muscle Building - How Often To Take
+	
+	</blockquote>
+	  </div>
+      <div class="col-md-6">
+          <iframe width="500" height="360" src="https://www.youtube.com/embed/bv6LqgBKEVA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<p><blockquote style="font-size:20px;font-weight:bold">CopyRights @<a href="https://www.youtube.com/channel/UCeKIGQUCMnyY7TtPZmFVwtQ" target="_blank">Aaqib Qureshi Fitness
+</a></blockquote></p>
+<u><cite style="font-weight:bold;">Description</cite></u>
+				<blockquote style="font-size:20px;font-weight:bold">
+
+	In this VIdeo,how boiled POtatoes are useful to gain weight will be explained
+	
+	</blockquote>
+
+		
+		</div>
+      <div class="col-md-6">
+	  <iframe width="500" height="360" src="https://www.youtube.com/embed/4folx0ORjoE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	  <p><blockquote style="font-size:20px;font-weight:bold">CopyRights @<a href="https://www.youtube.com/channel/UC4rlAVgAK0SGk-yTfe48Qpw" target="_blank">Bright Side
+</a></blockquote></p>
+<u><cite style="font-weight:bold;">Description</cite></u>
+				<blockquote style="font-size:20px;font-weight:bold">
+
+Fish like salmon, mackerel, tuna, trout, herring, and sardines are rich in omega-3 fatty acids. These are the acids that help your brain work and support the health of your heart.	
+	</blockquote>
+          </div>
+      <div class="col-md-6">
+      <iframe width="500" height="360" src="https://www.youtube.com/embed/D8cMWvCE3D8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	  
+	   <p><blockquote style="font-size:20px;font-weight:bold">CopyRights @<a href="https://www.youtube.com/channel/UCka5AHr2BQsM53m-VI8lUOw" target="_blank">5 Best Products
+</a></blockquote></p>
+<u><cite style="font-weight:bold;">Description</cite></u>
+				<blockquote style="font-size:20px;font-weight:bold">
+
+Ready to see some of the best protein powders for weight gain in 2020? Let's check them out!
+
+	</blockquote>
+	  </div>
+    </div>    
 </div>
 </section>
 <!-- ======= Footer ======= -->
