--- a/UnderWeight.html
+++ b/UnderWeight.html
@@ -406,6 +406,8 @@
       </div>
     </div>
   </div>
+	  <section class="home-blog bg-sand">
+  <div class="container">
   <div class="row justify-content-md-center">
       <div class="col-xl-5 col-lg-6 col-md-8">
         <div class="section-title text-center title-ex1">
@@ -509,7 +511,10 @@ Ready to see some of the best protein powders for weight gain in 2020? Let's che
 
 	</blockquote>
 	  </div>
-    </div>    
+    </div>  
+</div>
+</section>
+
 </div>
 </section>
 <!-- ======= Footer ======= -->
