--- a/bmi.html
+++ b/bmi.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="./assets/css/nav.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -91,6 +94,7 @@
     </div>
   </header>
   <!-- End #header -->
+        <section style="background-color:#f5f5f6;font-family: 'Arima Madurai', cursive;"
   <br>br><br><br>
 <div class="container">
 
