--- a/bmi.html
+++ b/bmi.html
@@ -2,6 +2,7 @@
 <html>
 <head>
         <link rel="stylesheet" href="./assets/css/nav.css">
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
         <link rel="preconnect" href="https://fonts.googleapis.com">
