--- a/Aboutus.html
+++ b/Aboutus.html
@@ -104,7 +104,7 @@
             <h3 style="color: black;">Our Mission:</h3>
                       <p class="fst-italic" style="margin-left: 30px;">
              "Our mission keeps us focused and accountable, our vision drives our customers to change their life's. 
-To understand best how we are different, we invite you to learn about our website.Fitness flyer is the vision to drive our users to be fit and healthier" 
+Fitness flyer is the vision to drive our users to be fit and healthier" 
             </p>
 			
             <h3 style="color: black;">Our Essence:</h3>
