--- a/Oweight/opost2.html
+++ b/Oweight/opost2.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="../assets/css/nav.css">
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
     
