--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
         width: 360px;
       }
     }
+	  @media screen and (max-width:766px){
+		.main-head{
+		  line-height:1.6;
+		  }
+		  
+	  }
     .aboutus{
       padding-top: 180px;
     }
@@ -196,7 +202,7 @@
 <div class="hero-container">
      <div class="container">
 	 
-     <h1 style="color:white;font-size:50px;font-family: 'Arima Madurai', cursive;">Welcome to Fitness Flyers</h1>
+     <h1 class="main-head" style="color:white;font-size:50px;font-family: 'Arima Madurai', cursive;">Welcome to Fitness Flyers</h1>
      <b> <h2 style="color:white;font-size:30px;font-variant:bold;font-family: 'Arima Madurai', cursive;">Dream to be fit </h2></b>
 
 <a href="bmi.html">	<input type="button" value="BMI Calculation" style="color:black;background-color:#89CFF0;font-family: 'Arima Madurai', cursive;" class="btn-get-started scrollto" data-toggle="popover" title="Click Here to Calculate Your BMI"></a>
