--- a/contactus.html
+++ b/contactus.html
@@ -31,6 +31,9 @@
 		      aside{
 			display:none;
 			}
+			.logo_name{
+			display:none;
+			}
 		}
 	</style>
   
@@ -44,7 +47,7 @@
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"  style="color:black">Fitness Flyers</a></h1>
+          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo_name" style="color:black">Fitness Flyers</a></h1>
          </div>
       </div>
       <div class="header_right">
