--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         width: 360px;
       }
     }
-	  @media screen and (max-width:766px){
+	  @media only screen and (max-width:766px){
 		.main-head{
 		  line-height:1.6;
 		  }
