--- a/Aboutus.html
+++ b/Aboutus.html
@@ -28,7 +28,11 @@
   <!-- Template Main CSS File -->
   <link href="./assets/css/style.css" rel="stylesheet">
 
-  
+  @media only screen and (max-width: 768px) {
+			.logo_name{
+			display:none;
+			}
+		}
 </head>
 
 <body>
@@ -39,7 +43,7 @@
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"  style="color:black">Fitness Flyers</a></h1>
+          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo-name" style="color:black">Fitness Flyers</a></h1>
          </div>
       </div>
       <div class="header_right">
