--- a/Aboutus.html
+++ b/Aboutus.html
@@ -27,12 +27,13 @@
 
   <!-- Template Main CSS File -->
   <link href="./assets/css/style.css" rel="stylesheet">
-
+<style>
   @media only screen and (max-width: 767px) {
 			.logo_name{
 			display:none;
 			}
 		}
+	</style>
 </head>
 
 <body>
@@ -43,7 +44,7 @@
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo-name" style="color:black">Fitness Flyers</a></h1>
+          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo_name" style="color:black">Fitness Flyers</a></h1>
          </div>
       </div>
       <div class="header_right">
