--- a/UnderWeight.html
+++ b/UnderWeight.html
@@ -230,6 +230,12 @@
     height: 1px;
     background: #eeeef2;
 }
+	  .media-body a{
+	text-decoration:none;
+	  }
+	  
+	  
+	  
   </style>
  
   
