--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
 		.main-head{
 		  line-height:1.6;
 		  }
-		  
+		  .aboutus{
+		  padding-top:100px;
+		  }
 	  }
     .aboutus{
       padding-top: 180px;
