--- a/O_Workouts.html
+++ b/O_Workouts.html
@@ -223,6 +223,16 @@
     height: 1px;
     background: #eeeef2;
 }
+	  
+	  @media only screen and (max-width: 767px) {
+			.logo_name{
+			display:none;
+			}
+		}
+	  
+	  
+	  
+	  
   </style>
  
   
@@ -237,7 +247,7 @@
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"  style="color:black">Fitness Flyers</a></h1>
+          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo_name" style="color:black">Fitness Flyers</a></h1>
          </div>
       </div>
       <div class="header_right">
