--- a/Obesity/obese9.html
+++ b/Obesity/obese9.html
@@ -244,7 +244,7 @@ Template sidebar
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo_name" style="color:black">Fitness Flyers</a></h1>
+          <h1><a href="index.html"  ><img src="../assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo_name" style="color:black">Fitness Flyers</a></h1>
          </div>
       </div>
       <div class="header_right">
