--- a/Obesity/obese1.html
+++ b/Obesity/obese1.html
@@ -223,7 +223,11 @@ Blog post entries
 /*
 Template sidebar
 */
-
+@media screen and (max-width: 767px){
+    .logo_name{
+            display:none;
+    }
+}
 
   </style>
 
@@ -240,7 +244,7 @@ Template sidebar
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="../assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"  style="color:black">Fitness Flyers</a></h1>
+          <h1><a href="index.html"  ><img src="../assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo_name" style="color:black">Fitness Flyers</a></h1>
          </div>
       </div>
       <div class="header_right">
