--- a/bmi.html
+++ b/bmi.html
@@ -109,7 +109,7 @@
   <div class="section-title">
     <center><h2 style="background-color:#89CFF0;color:white;font-size:50px">BMI Calculation</h2></center>
   </div>
-        <table class="table table-hover" align="right" style="margin-top: 35px;>
+        <table class="table table-hover" align="right" style="margin-top: 35px;">
   <thead style="background-color:#89CFF0">
     <tr style="font-weight:bold">
       <th>Categories</th>
