--- a/bmi.html
+++ b/bmi.html
@@ -109,7 +109,9 @@
   <div class="section-title">
     <center><h2 style="background-color:#89CFF0;color:white;font-size:50px">BMI Calculation</h2></center>
   </div>
-        <table class="table table-hover" align="right" style="margin-top: 35px;">
+        <div class="row">
+                <div class="col">
+        <table class="table table-hover" style="margin-top: 35px;">
   <thead style="background-color:#89CFF0">
     <tr style="font-weight:bold">
       <th>Categories</th>
@@ -143,7 +145,7 @@
       </tr>            
   </tbody>
 </table>
-
+                </div>
 <form name="bmiForm" style="margin-top: 40px;">
 <b style="font-size: 30px;">Your Weight(kg): <input type="text" name="weight" size="10"  ><br /></b><br>
 <b style="font-size: 30px;">Your Height(cm): <input type="text" name="height" size="10"><br /></b>
@@ -155,7 +157,7 @@
 <button id="myButton" style="display:inline;background-color:#89CFF0;color:white;border:1px solid #000;font-size: 20px;">Click here for Diets</button>
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myButton1" style="display:inline;background-color:#89CFF0;color:white;border:1px solid #000;font-size: 20px;" >Click here for Workouts</button>
 </div>
-
+        </div>
 <!------------------------------------------------------ Diet Redirect script starts here ----------------------------------------------------->
 
 <script type="text/javascript">
