--- a/Aboutus.html
+++ b/Aboutus.html
@@ -90,7 +90,7 @@
   <!-- ======= Hero Section ======= -->
   
 
-  <main id="main" style="background-color:#f5f5f6">
+    <main id="main" style="background-color:#f5f5f6">
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
@@ -103,36 +103,31 @@
         <div class="row">
 		
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/aboutus.png" class="img-fluid" alt="">
+            <img src="./assets/img/aboutus.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
-            <h3 style="color: black;">Our Mission:</h3>
-                      <p class="fst-italic" style="margin-left: 30px;">
+            <h3 style="color: black;font-weight:bold">Our Mission:</h3>
+                      <p class="fst-italic" style="margin-left: 30px;color:#000">
              "Our mission keeps us focused and accountable, our vision drives our customers to change their life's. 
-Fitness flyer is the vision to drive our users to be fit and healthier" 
+To understand best how we are different, we invite you to learn about our website.Fitness flyer is the vision to drive our users to be fit and healthier" 
             </p>
 			
-            <h3 style="color: black;">Our Essence:</h3>
-            <p class="fst-italic" style="margin-left: 30px;">
+            <h3 style="color: black;font-weight:bold">Our Essence:</h3>
+            <p class="fst-italic" style="margin-left: 30px;color:#000">
 " At our core, fitness flyer operates on ideal weight calculation. Provides tips, workouts, diet plans"</p>
 
- <h3 style="color: black;">Our Promise:</h3>
-            <p class="fst-italic" style="margin-left: 30px;">
+ <h3 style="color: black;font-weight:bold">Our Promise:</h3>
+            <p class="fst-italic" style="margin-left: 30px;color:#000">
 "We deliver the fitness tips and help people to calculate their ideal weight. We change people to get healthier, reach new goals and do things they love. We are champions for healthy, happy lives"  
- <h3 style="color: black;">Our Vibes:</h3>
-            <p class="fst-italic" style="margin-left: 30px;">
+ <h3 style="color: black;font-weight:bold">Our Vibes:</h3>
+            <p class="fst-italic" style="margin-left: 30px;color:#000">
 "At Fitness flyer, we make magic. We dream it, and then do it - together - every day we listen to your body"
             
           </div>
         </div>
 
       </div>
-    </section><!-- End About Us Section -->
-
-    <br>
-	<br>
-	<br>
-	<br>
+	    </section>
   <!-- ======= Footer ======= -->
   <!-- ======= Footer ======= -->
   <footer id="footer">
