--- a/Aboutus.html
+++ b/Aboutus.html
@@ -103,7 +103,7 @@
         <div class="row">
 		
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="./assets/aboutus.jpg" class="img-fluid" alt="">
+            <img src="./assets/img/aboutus.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
             <h3 style="color: black;font-weight:bold">Our Mission:</h3>
