--- a/bmi.html
+++ b/bmi.html
@@ -38,8 +38,8 @@
 
 </head>
 <style>
-        main {
-  background-image: url("assets/img/dumbell.jpg");
+        body{
+  background-image: url("./assets/img/dumbell.jpg");
   background-repeat: no-repeat;
   background-size:contain;
 }
