--- a/bmi.html
+++ b/bmi.html
@@ -39,7 +39,7 @@
 </head>
 <style>
         body{
-  background-image: url("./assets/img/dumbell.jpg");
+  background-image: url("https://drive.google.com/file/d/16lPkA048cbzd-3b95xmtfL6Z6-YjUerD/view?usp=sharing");
   background-repeat: no-repeat;
   background-size:contain;
 }
