--- a/bmi.html
+++ b/bmi.html
@@ -39,7 +39,7 @@
 </head>
 <style>
         body{
-  background-image: url("https://drive.google.com/file/d/16lPkA048cbzd-3b95xmtfL6Z6-YjUerD/view?usp=sharing");
+  background-image: url('./assets/img/dumbell.jpeg');
   background-repeat: no-repeat;
   background-size:contain;
 }
@@ -238,7 +238,7 @@ else if(cat == "Normal Weight")
   
                     <!-- Modal body with image -->
                     <div class="modal-body">
-                        <img src="./assets/img/popup.jpg" />
+                        <img src="./assets/img/popup.jpeg" />
                     </div>
                 </div>
             </div>
