--- a/bmi.html
+++ b/bmi.html
@@ -283,18 +283,12 @@ location. href = "Bmi_Obesity.html#Ob_WOrkouts";
 };
 </script>  <!-------------------------------------------------  Redirect script ends here------------------------------------------------------------------------------------>
 
-
-
-
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-
-
-<br><br><br><br><br><br><br><br><br><br>
 <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright &nbsp;&nbsp;&nbsp;<strong><span><img src="assets/img/portfolio/logo2.jpg" style="height:30px">&nbsp;&nbsp;&nbsp;&nbsp;Fitness Flyers</span></strong>. All Rights Reserved
+        &copy; Copyright &nbsp;&nbsp;&nbsp;<strong><span><img src="./assets/img/portfolio/logo2.jpg" style="height:30px">&nbsp;&nbsp;&nbsp;&nbsp;Fitness Flyers</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
        
