--- a/contactus.html
+++ b/contactus.html
@@ -36,7 +36,7 @@
 			}
 		}
 		body {
-  background-image: url("./assets/img/contactus.jpg");
+  background-image: url('./assets/img/contactus.jpeg');
   background-repeat: no-repeat;
   background-size:contain;
 }
