--- a/contactus.html
+++ b/contactus.html
@@ -48,6 +48,10 @@ input {
 input:focus {
   border-color: transparent;
 }
+		main{
+		width:100%;
+		height:100vh;
+		}
 
 	</style>
   
@@ -159,7 +163,6 @@ input:focus {
 		</div>
 </b>		
 	</div>
-    <br><br>
 	</main>
 	<script type="text/javascript">
   function myFunction() {
@@ -214,10 +217,9 @@ function myFunction2() {
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright &nbsp;&nbsp;&nbsp;<strong><span><img src="assets/img/portfolio/logo2.jpg" style="height:30px">&nbsp;&nbsp;&nbsp;&nbsp;Fitness Flyers</span></strong>. All Rights Reserved
+        &copy; Copyright &nbsp;&nbsp;&nbsp;<strong><span><img src="./assets/img/portfolio/logo2.jpg" style="height:30px">&nbsp;&nbsp;&nbsp;&nbsp;Fitness Flyers</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-       
       </div>
     </div>
   </footer><!-- End #footer -->
@@ -236,5 +238,4 @@ function myFunction2() {
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
