--- a/contactus.html
+++ b/contactus.html
@@ -107,7 +107,7 @@ input:focus {
       </div>
     </div>
   </header><!-- End #header --> 
-  <main id="main" style="font-family: 'Arima Madurai', cursive;margin-top:40px">
+  <main id="main" style="font-family: 'Arima Madurai', cursive;">
 <hr style="background-color:#89CFF0"><br>  
   <main id="main" style="font-family: 'Arima Madurai', cursive;">
 <div class="container contact" width="70%">	
