--- a/contactus.html
+++ b/contactus.html
@@ -35,7 +35,7 @@
 			display:none;
 			}
 		}
-		body {
+		main{
   background-image: url('./assets/img/contactus.jpeg');
   background-repeat: no-repeat;
   background-size:contain;
