--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fitness Flyers Bootstrap Template - contactus</title>
+  <title>FitnessFlyers - contactus</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -35,10 +35,10 @@
 			display:none;
 			}
 		}
-		main{
+main{
   background-image: url('./assets/img/contactus.jpeg');
   background-repeat: no-repeat;
-  background-size:contain;
+  background-size:cover;
 }
 input {
   outline: 0;
@@ -149,7 +149,7 @@ input:focus {
 				</div>
 				<div class="form-group">        
 				  <div class="col-sm-offset-2 col-sm-10">
-					<center><button class="btn btn-default" value="Set Focus" onclick="myFunction()" style=" color:#fff;margin-top: 10px;box-shadow: 3px 6px 10px 0.3px">Submit</button></center>
+					<center><button class="btn btn-default" value="Set Focus" onclick="myFunction()" style=" color:#fff;margin-top: 10px; margin-bottom:20px;box-shadow: 3px 6px 10px 0.3px">Submit</button></center>
 				  </div>
 				</div>
 			</div>
