--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
 		  line-height:1.6;
 		  }
 		  .aboutus{
-		  padding-top:100px;
+		  display:none;
 		  }
+		  
 	  }
     .aboutus{
       padding-top: 180px;
