--- a/contactus.html
+++ b/contactus.html
@@ -34,7 +34,12 @@
 			.logo_name{
 			display:none;
 			}
-		}
+			main{
+			  background-image: url('./assets/img/contactus.jpeg');
+ 			  background-repeat: no-repeat;
+ 			  background-size:cover;
+			}	
+       		}
 main{
   background-image: url('./assets/img/contactus.jpeg');
   background-repeat: no-repeat;
