--- a/bmi.html
+++ b/bmi.html
@@ -44,9 +44,11 @@
   background-size:contain;
 }
    @media screen and (max-width: 767px){
-           .container img{
-            width:93%;
-           }
+            body{
+  background-image: url('./assets/img/dumbell.jpeg');
+  background-repeat: no-repeat;
+  background-size:contain;
+}
         }
         @media screen and (max-width: 767px){
     .logo_name{
