--- a/bmi.html
+++ b/bmi.html
@@ -66,7 +66,7 @@
   
       <div class="header_left">
          <div class="logo me-auto">
-          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo_name"  style="color:black">Fitness Flyers</a></h1>
+          <h1><a href="index.html"  ><img src="./assets/img/portfolio/logo2.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html" class="logo_name"  style="font-family: 'Arima Madurai', cursive;color:black">Fitness Flyers</a></h1>
          </div>
       </div>
       <div class="header_right">
@@ -109,7 +109,7 @@
     </div>
   </header>
   <!-- End #header -->
-        <main id="main">
+        <main id="main" style="font-family: 'Arima Madurai', cursive;">
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
@@ -161,12 +161,12 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
             <form name="bmiForm" style="margin-top: 40px;font-size:20px;;color:#000">
-<b style="font-size: 30px">Your Weight(kg): </strong><input type="text" name="weight" size="10" placeholder="Enter Weight"  ><br /></b><br>
-<b style="font-size: 30px;">Your Height(cm): <input type="text" name="height" size="10" placeholder="Enter Height"><br /></b>
+<p style="font-size: 30px">Your Weight(kg): </strong><input type="text" name="weight" size="10" placeholder="Enter Weight"  ><br /></p><br>
+<p style="font-size: 30px;">Your Height(cm): <input type="text" name="height" size="10" placeholder="Enter Height"><br /></p>
 <input type="button" value="Calculate BMI" onClick="calculateBmi();hidebutton()" style="font-size: 30px;display:inline;background-color:#89CFF0;color:white;margin-top:15px;margin-left:15px;border:1px solid #000;">
 <input type="reset" value="Reset" style="display:inline;background-color:#89CFF0;color:white;border:1px solid #000;font-size: 30px;"/><br><br><br>
-<b style="font-size: 30px;">Your BMI:</b> <input type="text" name="bmi" size="10" style="width:220px;font-size: 30px;" readonly><br><br>
-<b style="font-size: 30px;">Category:</b> <input type="text" name="meaning" size="25" id="category" style=" width:220px;font-size: 30px;" readonly>
+<p style="font-size: 30px;">Your BMI:</p> <input type="text" name="bmi" size="10" style="width:220px;font-size: 30px;" readonly><br><br>
+<p style="font-size: 30px;">Category:</p> <input type="text" name="meaning" size="25" id="category" style=" width:220px;font-size: 30px;" readonly>
 </form><br>
 <button id="myButton" style="display:inline;background-color:#89CFF0;color:white;border:1px solid #000;font-size: 20px;"  data-toggle="modal" 
                 data-target="#exampleModal">Click here for Diets</button>
