--- a/contactus.html
+++ b/contactus.html
@@ -133,7 +133,7 @@ input:focus {
 				</div>
         <br>
 				<div class="form-group">
-				  <label class="control-label col-sm-2" for="phone"><b style="color:red;size:5px;font-size:20px;font-weight:bold"> </b><b style="size:5px;color:#fff;font-size:20px;">PhoneNumber&nbsp;:</b></label>
+				  <label class="control-label col-sm-2" for="phone"><b style="size:5px;color:#fff;font-size:20px;">Phone Number&nbsp;:</b></label>
 				  <div class="col-sm-10">          
 					<input type="text" class="form-control" id="phone" name="phone" placeholder="Enter Your Contact Number" style="border-width: 0 0 2px;border-color:white;background-color:transparent;width:500px;color:#fff" title="Please enter 10 digit valid phone number starts with 6/7/8/9 " name="lname" required>
 				  </div>
