--- a/bmi.html
+++ b/bmi.html
@@ -168,10 +168,8 @@
 <p style="font-size: 30px;">Your BMI:</p> <input type="text" name="bmi" size="10" style="width:220px;font-size: 30px;" readonly><br><br>
 <p style="font-size: 30px;">Category:</p> <input type="text" name="meaning" size="25" id="category" style=" width:220px;font-size: 30px;" readonly>
 </form><br>
-<button id="myButton" style="display:inline;background-color:#89CFF0;color:white;border:1px solid #000;font-size: 20px;"  data-toggle="modal" 
-                data-target="#exampleModal">Click here for Diets</button>
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myButton1" style="display:inline;background-color:#89CFF0;color:white;border:1px solid #000;font-size: 20px;" >Click here for Workouts</button>
-
+<button id="myButton" style=" background-color: #89CFF0;border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none;font-size: 20px;margin: 4px 2px;cursor: pointer;"  data-toggle="modal" 
+                data-target="#exampleModal">Click here for Diets & WorkOuts</button>
           </div>
         </div>
 
