--- a/bmi.html
+++ b/bmi.html
@@ -163,8 +163,8 @@
             <form name="bmiForm" style="margin-top: 40px;font-size:20px;;color:#000">
 <p style="font-size: 30px">Your Weight(kg): </strong><input type="text" name="weight" size="10" placeholder="Enter Weight"  ><br /></p><br>
 <p style="font-size: 30px;">Your Height(cm): <input type="text" name="height" size="10" placeholder="Enter Height"><br /></p>
-<input type="button" value="Calculate BMI" onClick="calculateBmi();hidebutton()" style="font-size: 30px;display:inline;background-color:#89CFF0;color:white;margin-top:15px;margin-left:15px;border:1px solid #000;">
-<input type="reset" value="Reset" style="display:inline;background-color:#89CFF0;color:white;border:1px solid #000;font-size: 30px;"/><br><br><br>
+<input type="button" value="Calculate BMI" onClick="calculateBmi();hidebutton()" style=" background-color: #89CFF0;border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none;font-size: 20px;margin: 4px 2px;cursor: pointer;">
+&nbsp;&nbsp;<input type="reset" value="Reset" style=" background-color: #89CFF0;border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none;font-size: 20px;margin: 4px 2px;cursor: pointer;"/><br><br><br>
 <p style="font-size: 30px;">Your BMI:</p> <input type="text" name="bmi" size="10" style="width:220px;font-size: 30px;" readonly><br><br>
 <p style="font-size: 30px;">Category:</p> <input type="text" name="meaning" size="25" id="category" style=" width:220px;font-size: 30px;" readonly>
 </form><br>
