--- a/bmi.html
+++ b/bmi.html
@@ -165,8 +165,8 @@
 <p style="font-size: 30px;">Your Height(cm): <input type="text" name="height" size="10" placeholder="Enter Height"><br /></p>
 <input type="button" value="Calculate BMI" onClick="calculateBmi();hidebutton()" style=" background-color: #89CFF0;border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none;font-size: 20px;margin: 4px 2px;cursor: pointer;">
 &nbsp;&nbsp;<input type="reset" value="Reset" style=" background-color: #89CFF0;border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none;font-size: 20px;margin: 4px 2px;cursor: pointer;"/><br><br>
-<p style="font-size: 30px;">Your BMI:</p> <input type="text" name="bmi" size="10" style="width:220px;font-size: 30px;" readonly>
-<p style="font-size: 30px;">Category:</p> <input type="text" name="meaning" size="25" id="category" style=" width:220px;font-size: 30px;" readonly>
+<p style="font-size: 30px;">Your BMI:<input type="text" name="bmi" size="10" style="width:220px;font-size: 30px;" readonly></p>
+<p style="font-size: 30px;">Category:<input type="text" name="meaning" size="25" id="category" style=" width:220px;font-size: 30px;" readonly></p>
 </form><br>
 <button id="myButton" style=" background-color: #89CFF0;border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none;font-size: 20px;margin: 4px 2px;cursor: pointer;"  data-toggle="modal" 
                 data-target="#exampleModal">Click here for Diets & WorkOuts</button>
