--- a/Overweight.html
+++ b/Overweight.html
@@ -293,7 +293,7 @@
 		<div class="row justify-content-md-center">
 			<div class="col-xl-5 col-lg-6 col-md-8">
 				<div class="section-title text-center title-ex1">
-					<h2>Diet For Under weight</h2>
+					<h2>Diet For Over Weight</h2>
 					<!-- <p>Inventore cillum soluta inceptos eos platea, soluta class laoreet repellendus imperdiet optio.</p>
                     --></div> 
 			</div>
