--- a/Obesity.html
+++ b/Obesity.html
@@ -416,7 +416,7 @@
     <div class="row ">
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese9.html"><img class="d-flex" src="https://www.verywellhealth.com/thmb/C5fuVjIqCe5DyZATjE6qU99vJ4s=/2880x1920/filters:fill(87E3EF,1)/the-coconut-allergy-diet-guide-1324149-primary-recirc-79145d6d86fc4f26afaef10cbbc11da1.jpg" style="width:400;height:260;"alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese9.html"><img class="d-flex" src="./Obesity/obese9.html " style="width:400;height:260;"alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
 				  	<h5 class="day">08</h5>
 				  	<span class="month">July</span>
@@ -430,7 +430,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese10.html"><img class="d-flex" src="https://c4.wallpaperflare.com/wallpaper/661/195/645/yogurt-wallpaper-preview.jpg" style="width:400;height:260;"alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese10.html"><img class="d-flex" src="./Obesity/obese10.html " style="width:400;height:260;"alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
