--- a/Obesity.html
+++ b/Obesity.html
@@ -416,7 +416,7 @@
     <div class="row ">
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese9.html"><img class="d-flex" src="./Obesity/obese9.html " style="width:400;height:260;"alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese9.html"><img class="d-flex" src="./Obesity/ob9.jpg " style="width:400;height:260;"alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
 				  	<h5 class="day">08</h5>
 				  	<span class="month">July</span>
@@ -430,7 +430,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese10.html"><img class="d-flex" src="./Obesity/obese10.html " style="width:400;height:260;"alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese10.html"><img class="d-flex" src="./Obesity/ob10.jpg" style="width:400;height:260;"alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
