--- a/Overweight.html
+++ b/Overweight.html
@@ -316,7 +316,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Oweight/opost2.html"><img class="d-flex" src="./images/Oweight/ow-2.jpeg" width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Oweight/opost2.html"><img class="d-flex" src="./images/Oweight/ow-2.jpeg" style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -330,7 +330,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Oweight/opost3.html"><img class="d-flex" src="./images/Oweight/ow-3.jpeg" width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Oweight/opost3.html"><img class="d-flex" src="./images/Oweight/ow-3.jpeg" style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -344,7 +344,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Oweight/opost4.html"><img class="d-flex" src="./images/Oweight/ow-4.jpeg" width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Oweight/opost4.html"><img class="d-flex" src="./images/Oweight/ow-4.jpeg" style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -374,7 +374,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Oweight/opost6.html"><img class="d-flex" src="./images/Oweight/ow-6.jpeg" width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Oweight/opost6.html"><img class="d-flex" src="./images/Oweight/ow-6.jpeg" style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
