--- a/Obesity.html
+++ b/Obesity.html
@@ -300,7 +300,7 @@
 		<div class="row ">
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese1.html"><img class="d-flex" src="./images/Obesity/ob1.jpg"  width="400"height="260" alt="Eggs"></a>
+				  <a href="./Obesity/obese1.html"><img class="d-flex" src="./images/Obesity/ob1.jpg"  style="width:300px;height:260px" alt="Eggs"></a>
 				  <!-- <div class="circle">
 				  	<h5 class="day">08</h5>
 				  	<span class="month">July</span>
@@ -314,7 +314,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese2.html"><img class="d-flex" src="./images/Obesity/ob2.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese2.html"><img class="d-flex" src="./images/Obesity/ob2.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -328,7 +328,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese3.html"><img class="d-flex" src="./images/Obesity/ob3.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese3.html"><img class="d-flex" src="./images/Obesity/ob3.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -342,7 +342,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese4.html"><img class="d-flex"  width="400"height="260" src="./images/Obesity/ob4.jpg" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese4.html"><img class="d-flex"  style="width:300px;height:260px" src="./images/Obesity/ob4.jpg" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -358,7 +358,7 @@
         <div class="row ">
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese5.html"><img  width="400"height="260" class="d-flex" src="./images/Obesity/ob5.jpg" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese5.html"><img style="width:300px;height:260px" class="d-flex" src="./images/Obesity/ob5.jpg" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
 				  	<h5 class="day">08</h5>
 				  	<span class="month">July</span>
@@ -372,7 +372,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese6.html"><img class="d-flex" src="./images/Obesity/ob6.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese6.html"><img class="d-flex" src="./images/Obesity/ob6.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -386,7 +386,7 @@
 			</div><!--  ./Obesity/obese7.html ----->
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese7.html"><img class="d-flex" src="http://www.loc.gov/static/managed-content/uploads/sites/16/2018/09/grapefruit.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese7.html"><img class="d-flex" src="http://www.loc.gov/static/managed-content/uploads/sites/16/2018/09/grapefruit.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -400,7 +400,7 @@
 			</div>
             <div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese8.html"><img class="d-flex" src="./images/Obesity/ob8.jpg"  width="400"height="260" alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese8.html"><img class="d-flex" src="./images/Obesity/ob8.jpg"  style="width:300px;height:260px" alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
   				  	<h5 class="day">08</h5>
   				  	<span class="month">July</span>
@@ -416,7 +416,7 @@
     <div class="row ">
 			<div class="col-md-6">
 				<div class="media blog-media">
-				  <a href="./Obesity/obese9.html"><img class="d-flex" src="./images/Obesity/ob9.jpg" style="width:400;height:260;"alt="Generic placeholder image"></a>
+				  <a href="./Obesity/obese9.html"><img class="d-flex" src="./images/Obesity/ob9.jpg" style="width:300px;height:260px""alt="Generic placeholder image"></a>
 				  <!-- <div class="circle">
 				  	<h5 class="day">08</h5>
 				  	<span class="month">July</span>
